--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ## Basic Configuration
-baseurl = "https://example.com/"
+baseurl = "https://getman.io/"
 languageCode = "en"
 
 title = "Sergii Getman"
