--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ theme = "hyde-hyde"
 
 ## Hugo Built-in Features
 # disqusShortname = "your-disqus-shortname"
-# googleAnalytics = "your-google-analytics-id"
+googleAnalytics = "UA-163649901-1"
 # enableRobotsTXT = true
 
 # summarylength = 30
